tag: disorders -> disorder

--- a/_posts/2024-02-27-dawn.md
+++ b/_posts/2024-02-27-dawn.md
@@ -3,7 +3,7 @@ layout: post
 title:  아침이 오면
 date:   2024-02-27 16:38:11 +0900
 image:  '/images/2024-02-27-dawn.png'
-tags:   [disorders]
+tags:   [disorder]
 ---
 좀처럼 잠이 찾아오지 않는 밤에는, 잠을 청하기보다 올 때까지 기다리지 않고 다른 것을 한다. 그러다 밤을 지새우기도 한다. 이따금 카메라를 가지고 밖으로 나간다. 아주 가끔 멋진 하늘을 만난다.
 
